--- a/app/src/main/res/layout/activity_borrow_book.xml
+++ b/app/src/main/res/layout/activity_borrow_book.xml
@@ -48,9 +48,12 @@
             android:drawableLeft="@drawable/bookname"
             android:drawablePadding="18dp"
             android:hint="Book Name"
-            android:inputType="text"
             android:minHeight="50dp"
-            android:padding="14dp" /> <!-- Espacement entre les champs -->
+            android:padding="14dp"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:cursorVisible="false"
+            android:inputType="none"/> <!-- Espacement entre les champs -->
 
         <!-- User Name -->
         <EditText
@@ -62,7 +65,10 @@
             android:drawableLeft="@drawable/baseline_person_24"
             android:drawablePadding="18dp"
             android:hint="Username"
-            android:inputType="text"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:cursorVisible="false"
+            android:inputType="none"
             android:minHeight="50dp"
             android:padding="14dp" /> <!-- Espacement entre les champs -->
 
@@ -76,7 +82,10 @@
             android:drawableStart="@drawable/daterequest"
             android:drawablePadding="18dp"
             android:hint="Request Date"
-            android:inputType="date"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:cursorVisible="false"
+            android:inputType="none"
             android:minHeight="50dp"
             android:padding="14dp" /> <!-- Espacement entre les champs -->
 
