--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -1,10 +1,14 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/admin_background"
+    android:background="@drawable/captlevender"
     android:padding="16dp">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:layout_marginBottom="72dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,24 +26,26 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Welcome Back,"
-                android:textSize="14sp"
-                android:textColor="@color/gray" />
+                android:text="Dashboard"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/white" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Admin Name"
+                android:text="Admin"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_marginStart="8dp"
-                android:textColor="@color/black" />
+                android:textColor="@color/white" />
 
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="end"
                 android:layout_marginStart="16dp"
+                app:tint="@color/white"
                 android:src="@drawable/baseline_person_24"
                 android:backgroundTint="@color/teal_200"
                 android:contentDescription="Admin Profile Picture" />
@@ -57,7 +63,7 @@
             android:layout_gravity="center">
 
             <GridLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:rowCount="2"
                 android:columnCount="2"
@@ -67,7 +73,7 @@
                 <!-- Card 1: Number of Books -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/books_card"
-                    android:layout_width="150dp"
+                    android:layout_width="125dp"
                     android:layout_height="150dp"
                     app:cardCornerRadius="16dp"
                     app:cardElevation="4dp"
@@ -92,24 +98,17 @@
                             android:layout_height="wrap_content"
                             android:text="Books"
                             android:textColor="@color/white"
-                            android:textSize="14sp"
+                            android:textSize="20sp"
                             android:layout_marginTop="8dp" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="250"
-                            android:textColor="@color/white"
-                            android:textSize="32sp"
-                            android:textStyle="bold"
-                            android:layout_marginTop="4dp" />
+
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
                 <!-- Card 2: Number of Users -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/users"
-                    android:layout_width="150dp"
+                    android:layout_width="125dp"
                     android:layout_height="150dp"
                     app:cardCornerRadius="16dp"
                     app:cardElevation="4dp"
@@ -134,29 +133,22 @@
                             android:layout_height="wrap_content"
                             android:text="Users"
                             android:textColor="@color/white"
-                            android:textSize="14sp"
+                            android:textSize="20sp"
                             android:layout_marginTop="8dp" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="120"
-                            android:textColor="@color/white"
-                            android:textSize="32sp"
-                            android:textStyle="bold"
-                            android:layout_marginTop="4dp" />
+
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
                 <!-- Card 3: Reservations -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/borrow_card"
-                    android:layout_width="150dp"
+                    android:layout_width="125dp"
                     android:layout_height="150dp"
                     app:cardCornerRadius="16dp"
                     app:cardElevation="4dp"
                     android:layout_margin="8dp"
-                    app:cardBackgroundColor="@color/teal_200">
+                    app:cardBackgroundColor="@color/lavender">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -174,30 +166,23 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Reservations"
+                            android:text="Borrows"
                             android:textColor="@color/white"
-                            android:textSize="14sp"
+                            android:textSize="20sp"
                             android:layout_marginTop="8dp" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="45"
-                            android:textColor="@color/white"
-                            android:textSize="32sp"
-                            android:textStyle="bold"
-                            android:layout_marginTop="4dp" />
+
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
                 <!-- Card 4: Custom Info -->
                 <androidx.cardview.widget.CardView
-                    android:layout_width="150dp"
+                    android:layout_width="125dp"
                     android:layout_height="150dp"
                     app:cardCornerRadius="16dp"
                     app:cardElevation="4dp"
                     android:layout_margin="8dp"
-                    app:cardBackgroundColor="@color/teal_700">
+                    app:cardBackgroundColor="@color/lavender">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -215,22 +200,29 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Custom Info"
+                            android:text="Profile"
                             android:textColor="@color/white"
-                            android:textSize="14sp"
+                            android:textSize="20sp"
                             android:layout_marginTop="8dp" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="N/A"
-                            android:textColor="@color/white"
-                            android:textSize="32sp"
-                            android:textStyle="bold"
-                            android:layout_marginTop="4dp" />
+
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </GridLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
-</ScrollView>
+    </ScrollView>
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:text="Logout"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/red"
+        android:padding="12dp"
+        android:drawableStart="@drawable/baseline_logout_24"
+        android:drawablePadding="8dp" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
